<resources>
    <string name="app_name">Smart Money</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Money</string>
    <string name="nav_header_subtitle">Spend Smart, Save Smarter \nNơi ví của bạn được chữa lành</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>

    <string name="menu_home">Smart Money</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="total_expenses">Tổng cộng</string>
    <string name="product_category">Danh mục:</string>
    <string name="content_description_end_icon">Nhập tên danh mục</string>
    <string name="helper_text">"ex.: Food/Gas,...etc "</string>
    <string name="product_name">Tên khoản chi</string>
    <string name="product_price">Số tiền</string>
    <string name="product_category_hint">Đầu mục chi tiêu:</string>
    <string name="transaction_date_hint">Thời gian:</string>
    <string name="monthly_expenses_in">Chi tiêu tháng này cho đầu mục :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="budget_manager">Danh mục</string>
    <string name="budget_planner">Kế hoạch</string>
    <string name="category">Tên danh mục</string>
    <string name="budget">Ngân sách</string>
    <string name="add_budget_category">Add budget category</string>
    <string name="add_income">Thêm khoản thu</string>
    <string name="category_price">Ngân sách</string>
    <string name="price_helper">Nhập giới hạn ngân sách cho danh mục chi tiêu này</string>
    <string name="new_budget_category_info">Danh mục chi tiêu</string>
    <string name="submit">Lưu</string>
    <string name="errorMsg">Không thể sửa tên danh mục</string>
    <string name="budget_analysis">Thống kê</string>
    <string name="add_to_your_wallet">Thêm khoản thu</string>
    <string name="money_amount">Số tiền</string>
    <string name="your_wallet">Ví của tôi</string>
    <string name="close">Đóng</string>
    <string name="my_wallet">Ví của tôi</string>
    <string name="your_wallet_contains_enough_money_for_this_plan">Ví còn đủ cho kế hoạch </string>
    <string name="the_deadline_of_this_plan_has_passed">Kế hoạch quá hạn</string>
    <string name="plan_title">Tên kế hoạch</string>
    <string name="needed_budget">Ngân sách kế hoạch</string>
    <string name="plan_deadline_date">Thời hạn:</string>
    <string name="add_plan">Lưu</string>
    <string name="add_transaction">Lưu</string>
    <string name="plan_desc">Mô tả kế hoạch</string>
    <string name="edit_plan">Lưu</string>
    <string name="your_expenses_this_month">Chi tiêu tháng này</string>
    <string name="month_s_expenses">Giao dịch</string>
    <string name="new_app_name">Smart Money</string>
    <string name="your_monthly_expenses_analysis">Cài đặt</string>
    <string name="new_budget_category">New Budget Category</string>
    <string name="plan_info">Chi tiết kế hoạch</string>
    <string name="your_expenses">Giao dịch</string>
    <string name="new_transaction">Thêm giao dịch mới</string>
    <string name="shared_wallet_management">Ví chung</string>
    <string name="member_name">Tên thành viên</string>
    <string name="member_role">Vai trò</string>
</resources>