<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/money_change"
            android:title="@string/month_s_expenses" />

        <item
            android:id="@+id/nav_budgetManager"
            android:icon="@drawable/categories"
            android:title="@string/budget_manager" />

        <item
            android:id="@+id/nav_budget_analysis"
            android:icon="@drawable/chart_square"
            android:title="@string/budget_analysis" />

        <item
            android:id="@+id/nav_budgetPlanner"
            android:icon="@drawable/receipt_item"
            android:title="@string/budget_planner" />

        <item
            android:id="@+id/nav_shared_wallet_management"
            android:icon="@drawable/categories"
            android:title="@string/shared_wallet_management">
            <!-- Submenu for shared wallet -->
            <menu>
                <item
                    android:id="@+id/nav_shared_wallet_transaction"
                    android:icon="@drawable/money_change"
                    android:title="Giao dịch ví chung" />
                <item
                    android:id="@+id/nav_shared_wallet_category"
                    android:icon="@drawable/categories"
                    android:title="Danh mục ví chung" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_member_management"
            android:icon="@drawable/receipt_item"
            android:title="Quản lí thành viên" />
    </group>

</menu>
