<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nhom10.smartmoney1.mainactivity.fragments.home.HomeFragment"
        android:label="@string/month_s_expenses"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_budgetManager"
        android:name="com.nhom10.smartmoney1.mainactivity.fragments.budgetmanager.BudgetManagerFragment"
        android:label="@string/budget_manager"
        tools:layout="@layout/fragment_budget_manager" />

    <fragment
        android:id="@+id/nav_budgetPlanner"
        android:name="com.nhom10.smartmoney1.budgetplanner.ui.BudgetPlannerFragment"
        android:label="@string/budget_planner"
        tools:layout="@layout/fragment_budget_planner" />

    <fragment
        android:id="@+id/nav_budget_analysis"
        android:name="com.nhom10.smartmoney1.budgetanalysis.BudgetAnalysisFragment"
        android:label="@string/budget_analysis"
        tools:layout="@layout/fragment_budget_planner" />


    <fragment
        android:id="@+id/nav_shared_wallet_management"
        android:name="com.nhom10.smartmoney1.sharedWalletManagement.SharedWalletTransaction"
        android:label="@string/shared_wallet_management"
        tools:layout="@layout/shared_wallet_transaction" />
    <fragment
        android:id="@+id/nav_shared_wallet_transaction"
        android:name="com.nhom10.smartmoney1.sharedWalletManagement.SharedWalletTransaction"
        android:label="Giao dịch ví chung"
        tools:layout="@layout/shared_wallet_transaction" />

    <fragment
        android:id="@+id/nav_shared_wallet_category"
        android:name="com.nhom10.smartmoney1.sharedWalletManagement.SharedWalletCategory"
        android:label="Danh mục ví chung"
        tools:layout="@layout/shared_wallet_category" />
    <fragment
        android:id="@+id/nav_member_management"
        android:name="com.nhom10.smartmoney1.memberManagement.MemberManagement"
        android:label="Quản lí thành viên"
        tools:layout="@layout/member_management" />
    <fragment
        android:id="@+id/nav_shared_plan"
        android:name="com.nhom10.smartmoney1.sharedWalletManagement.sharedBudgetplanner.ui.SharedBudgetPlannerFragment"
        android:label="Kế hoạch ví chung"
        tools:layout="@layout/fragment_budget_planner" />
    <fragment
        android:id="@+id/nav_shared_budget_analysis"
        android:name="com.nhom10.smartmoney1.sharedWalletManagement.sharedBudgetAnalysis.SharedBudgetAnalysisFragment"
        android:label="Thống kê ví chung"
        tools:layout="@layout/fragment_budget_planner" />

</navigation>